--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -1,4 +1,3 @@
-/* Local Fonts  */
 /* latin */
 @font-face {
   font-family: 'Open Sans';
@@ -52,10 +51,9 @@ header {
   display: flex;
   align-items: center;
   padding: 2rem;
-  border-bottom: 1px solid;
-  font-family: "Open Sans"
+  font-family: "Open Sans";
   /* position: fixed;
-  z-index: 1; */
+  z-index: 2; */
 }
 .logo {
   margin-left: 1.5rem;
@@ -95,5 +93,72 @@ ul li {
 }
 
 ul li:nth-child(3):hover {
-  color: #88BBD6;
+  color: #FF3B3F;
+  /* font-weight: bold; */
+  transition: 600ms linear 100ms;
+}
+
+/* Banner Section  */
+
+.bannerContainer {
+  background-color: #EFEFEF;
+}
+
+.bannerContent {
+  margin: 0 4rem;
+  display: flex;
+  align-items: center;
+}
+
+.bannerImage {
+  display: flex;
+  align-items: center;
+}
+
+.bannerImage img {
+  width: 60%;
+  margin: 2rem 0;
+}
+
+.bannerTextContainer {
+  display: flex;
+}
+
+.bannertext {
+  display: flex;
+  flex-direction: column;
+  margin-left: 2rem;
+  width: 30%;
+
+}
+
+.bannertext h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  line-height: 2rem;
+  margin-bottom: 1rem;
+}
+
+.bannertext p {
+  line-height: 1.5rem;
+  font-family: "Roboto";
+  margin-bottom: 1rem;
+}
+
+.startHere {
+  font-family: "Roboto";
+  margin:;
+  background-color: #88BBD6;
+  text-align: center;
+  color: white;
+  padding: 0.5rem;
+  font-weight: bold;
+  border: 0.5px solid #88BBD6;
+  border-radius: 0.25rem;
+}
+
+.startHere:hover {
+  background-color: #FF3B3F;
+  border: 0.5px solid #FF3B3F;
+  transition: 600ms linear 100ms;
 }
