--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -107,7 +107,7 @@ header {
 nav {
   display: flex;
   justify-content: flex-end;
-  width: 1200px;
+  width: 100%;
 }
 
 nav ul{
@@ -127,6 +127,12 @@ ul a {
 nav a:hover {
   color: #FF3B3F;
   transition: 600ms linear 50ms;
+}
+
+/* Mobile Nav  */
+
+.mobileNav {
+  display: none;
 }
 
 /* Banner Section  */
@@ -175,7 +181,6 @@ nav a:hover {
 
 .bannertext p {
   line-height: 1.5rem;
-  font-family: "Roboto";
   margin-bottom: 1rem;
   color: #1d1c1cf2;
 }
@@ -237,13 +242,16 @@ nav a:hover {
 }
 
 .fisrtContainer p {
-  font-family: "Roboto";
   margin-bottom: 2rem;
   line-height: 1.55rem;
 }
 
 .fisrtContainer p:nth-child(2n) {
   font-size: 0.85rem;
+}
+
+.firstSidemobile {
+  display: none;
 }
 
 @media only screen and (max-width: 880px) {
@@ -276,8 +284,9 @@ nav a:hover {
 .firstSide {
   display: flex;
   align-items: center;
-  /* margin-top: 3rem; */
   margin-bottom: 2rem;
+  border: 0.05rem solid #E9E9E9;
+  border-radius: 0.25rem;
 }
 
 .firstSide img {
@@ -293,7 +302,6 @@ nav a:hover {
 }
 
 .firstSide_text p {
-  font-family: "Roboto";
   margin-bottom: 0.5rem;
   line-height: 1.5rem;
 }
@@ -339,7 +347,7 @@ nav a:hover {
 
 .course {
   margin-right: 2rem;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
 }
 
 .course_text {
@@ -367,10 +375,19 @@ nav a:hover {
 }
 
 .course_text:hover {
-  /* background-color: #EFEFEF; */
   background-color: #FF3B3F;
   color: white;
-  transition: 450ms linear 200ms;
+  transition: 500ms ease-in-out 300ms;
+}
+
+/* Second Mobile Content  */
+
+.mobileCourse {
+  display: none;
+}
+
+.mheader {
+  display: none;
 }
 
 /* Third Content Section  */
