--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -75,8 +75,6 @@ header {
   align-items: center;
   margin: 1rem 1.5rem;
   font-family: "Open Sans";
-  /* position: fixed;
-  z-index: 2; */
 }
 
 .logo img {
@@ -269,8 +267,6 @@ nav a:hover {
 }
 
 .startHere {
-  font-family: "Roboto";
-  margin:;
   background-color: #FF3B3F;
   text-align: center;
   color: white;
@@ -520,8 +516,7 @@ nav a:hover {
 /* Second Content Section  */
 
 .smallContainer {
-  margin-left: 4.5rem;
-  margin-right: 2.5rem;
+  margin: 0 2.5rem 0 4.5rem;
 }
 
 .secondContent {
@@ -536,8 +531,7 @@ nav a:hover {
 }
 
 .course {
-  margin-right: 2rem;
-  margin-bottom: 2rem;
+  margin: 0 2rem 2rem 0;
 }
 
 .course_text {
